<resources>
    <string name="app_name">PoliBurguer</string>
    <string name="password_mismatch">Senhas digitadas são diferentes!</string>
    <string name="auth_failed">Autenticação falhou!</string>
    <string name="account_creation_failed">Criação de conta falhou!</string>
    <string name="creating_account">Criando conta</string>
    <string name="account_created">Conta criada</string>
    <string name="password_too_short">Senha deve possuir pelo menos 6 caracteres</string>
    <string name="logging_in">Realizando login</string>
    <string name="logged_in">Logado</string>
    <string name="logged_out">Deslogado</string>
    <string name="login_success">Usuário logado com sucesso</string>
    <string name="logout">Sair</string>
    <string name="configure_cc">Configurar cartão</string>
    <string name="db_read_failed">Leitura do BD falhou!</string>
    <string name="product_add_success">Produto adicionado com sucesso</string>
    <string name="product_add_failed">Falha ao adicionar produto</string>
    <string name="buy_order">Comprar carrinho</string>
    <string name="search_field">Busca</string>
    <string name="add_product">Adicionar produto</string>
    <string name="product">Produto</string>
    <string name="description">Descrição</string>
    <string name="store_id">ID da loja</string>
    <string name="price_cents">Preço em centavos</string>
    <string name="add">Adicionar</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="repeat_password">Repetir senha</string>
    <string name="add_order">Realizar pedido</string>
    <string name="order_history">Histórico de pedidos</string>
    <string name="admin_tasks">Tarefas administrativas</string>
    <string name="remove_products">Remover produtos</string>
    <string name="pending_orders">Pedidos pendentes</string>
    <string name="confirm_checkout">Confirmar compra</string>
    <string name="db_communication_failed">Comunicação com BD falhou!</string>
    <string name="checkout_empty">Carrinho está vazio!</string>
    <string name="checkout_success">Compra efetuada</string>
    <string name="cart">Carrinho</string>
    <string name="lower_item">item</string>
    <string name="lower_items">itens</string>
    <string name="lower_product">produto</string>
    <string name="lower_products">produtos</string>
    <string name="order_details_dialog">Detalhes da compra:</string>
    <string name="order_ready">Pedido pronto</string>
    <string name="back">Voltar</string>
    <string name="repeat_order">Repetir compra</string>
</resources>
